--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^2.2.0",
     "nayo-admin-core": "^1.0.7",
     "nodemon": "^1.19.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "axios": "*"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
