--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "*",
     "core-js": "^2.6.5",
     "countup.js": "^2.0.4",
+    "iview": "^3.5.1",
     "js-cookie": "^2.2.0",
     "moment": "^2.24.0",
     "nayo-admin-core": "^1.0.7",
